--- a/public/projects.json
+++ b/public/projects.json
@@ -10,6 +10,10 @@
       {
         "url": "https://www.youtube.com/embed/jY9bbJ7wv40",
         "caption": "Desiderium performed at ArrayMusic, February 8th, 2024"
+      },
+      {
+        "url": "https://www.youtube.com/embed/f071RIIaAJk",
+        "caption": "FLASH WARNING!! at 6:00 glitching imagery begins Projection art for Morphogenesis from the Elemental Suite by Duo Cichorium"
       }
     ],
     "img": "https://res.cloudinary.com/dsvcyich1/image/upload/v1711055704/cichorium/Screenshot_2024-03-21_171433_rztubh.png",
