shrink mail list

--- a/public/projects.json
+++ b/public/projects.json
@@ -53,6 +53,15 @@
     "shortDesc": "Audience members play a live game of Super Smash Bros. 64, with their button inputs controlling the musical electronics"
   },
   {
+    "name": "Feedback Dreams",
+    "url": "Dreams",
+    "feature": false,
+    "mainvideo": "https://www.youtube.com/embed/TPTnU13MIAg",
+    "img": "https://res.cloudinary.com/dsvcyich1/image/upload/c_fill,w_2000,h_1125,ar_16:9/v1711046650/cichorium/carousel/carousel3_u9jjjo.jpg",
+    "desc": "Feedback Dreams is a structured improvisation using no-input mixer, percussion, melodica, and music box. The internal feedback loop of the no-input is seeded and controlled by Jaz's playing and sent out through a delay pedal.",
+    "shortDesc": "for no-input mixer, percussion, melodica, and music box"
+  },
+  {
     "name": "Noise Ritual",
     "url": "Ritual",
     "mainvideo": "https://www.youtube.com/embed/AYr1qVBDHxk",
