--- a/public/projects.json
+++ b/public/projects.json
@@ -21,6 +21,18 @@
     "desc": "A four-movement music, art, and electronic extravaganza co-composed by Jaz Tsui and Louis Pino. Each movement utilizes customized electronic systems corresponding to a respective element of matter.\nMatchbox Ritual is a cyclical ritual between states of peace and chaos completed by two performers, both completing and beginning their journeys while briefly meeting in the middle. \nMorphogenesis features a handmade tree sculpture with custom projection art using OBS-based mapping; the sound and visuals reflect a sunset, a night storm, followed by the breaking of dawn. \nDesiderium uses DIY hydrophones, capturing the sounds of water and instruments within it; sounds are processed in Ableton Live, creating a soundscape that explores island caves, a vibrant shore, and the depths of the ocean. \nScintillation combines the MUGIC motion sensor, Arduino, and Max, to allow the performers to control the wind (electronic fans) to activate several sets of windchimes — an aleatoric soundscape evoking a spring day in a breezy field."
   },
   {
+    "name": "Canvas Conductor",
+    "url": "Canvas",
+    "programLink": "",
+    "feature": true,
+    "programText": "",
+    "mainvideo": "https://www.youtube.com/embed/XPQH9tVcp9E",
+    "secondaryVideos": [],
+    "img": "https://res.cloudinary.com/dsvcyich1/image/upload/v1719269393/Duo_Cichorium_-_rec1_v9tkch.jpg",
+    "shortDesc": "A homemade electroacoustic instrument combining the sounds of a contact mic'ed painter's canvas and synthesizer controlled by the painter.",
+    "desc": "Canvas Conductor is an instrument we built in May 2024. The canvas is outfitted with two contact microhpones and interwoven metal wires. The paintbrush contains another metal wire, allowing the painter to make electrical connections with the interwoven threads. These connections control an arduino based synthesizer, with other parameters optionally controlled by a second performer. We often run the entire output of the instrument into a delay or reverb module in performance."
+  },
+  {
     "name": "Letter Piece #1",
     "url": "Letter",
     "feature": true,
